[package]
name = "slicebuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
# triomphe = "0.1.9"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
spin_sleep = "1.1.1"
parking_lot = "0.12.1"
