[package]
name = "slicebuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
# parking_lot = "0.12.1"
thiserror = "2.0.3"
# triomphe = "0.1.9"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
spin_sleep = "1.1.1"
testresult = "0.4.1"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"
